--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
         <section class="about">
             <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="image of unglazed ceramic vase with feathery leaves in it">
-            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="image of a white ceramic vase with a leafy stemmed flower in it"
+            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="image of a white ceramic vase with a leafy stemmed flower in it">
             <h3>ABOUT US</h3>
             <p>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet facilisis magna etiam. Sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Lectus vestibulum mattis ullamcorper velit sed ullamcorper. Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Libero enim sed faucibus turpis in. Sed viverra tellus in hac. Quis hendrerit dolor magna eget est lorem. Arcu cursus vitae congue mauris. Egestas dui id ornare arcu odio ut. Venenatis lectus magna fringilla urna porttitor. Sed sed risus pretium quam vulputate dignissim suspendisse in est."
