--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <a href>CARA CARA</a>
-            <img src="./assets/icons8-pottery-96.png" alt="image of an outline of a vase">
+            <img src="./assets/icons8-pottery-96.png" alt="outline of a vase">
             <ul> 
                 <li>ABOUT</li>
                 <li>PRODUCTS</li>
@@ -20,44 +20,86 @@
         </nav>
     </header>
     <main>
-        <section class="home">
+        
+        <div>
             <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="image of hands working on a pottery piece">
-            <h1>CERAMICS CRAFTED BY HAND...</h1>
-            <h2>...FROM THE GROUND UP</h2>
-        </section>
-        <section class="about">
-            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="image of unglazed ceramic vase with feathery leaves in it">
-            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="image of a white ceramic vase with a leafy stemmed flower in it">
-            <h3>ABOUT US</h3>
+            <p>CERAMICS CRAFTED BY HAND...</p> 
+            <p>...FROM THE GROUND UP</p>
+        </div>
+
+        <div class="about">
+            <img src="./assets/Cylinder_unglazed3_2048x2048.jpg" alt="unglazed ceramic vase with feathery leaves in it">
+            <img src="./assets/Vase_Dame_2048x2048.jpg" alt="white ceramic vase with a leafy stemmed flower in it">
+            <h1>ABOUT US</h1>
             <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet facilisis magna etiam. Sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Lectus vestibulum mattis ullamcorper velit sed ullamcorper. Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Libero enim sed faucibus turpis in. Sed viverra tellus in hac. Quis hendrerit dolor magna eget est lorem. Arcu cursus vitae congue mauris. Egestas dui id ornare arcu odio ut. Venenatis lectus magna fringilla urna porttitor. Sed sed risus pretium quam vulputate dignissim suspendisse in est."
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Facilisis mauris sit amet massa. Senectus et netus et malesuada fames ac turpis egestas maecenas. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Sagittis id consectetur purus ut faucibus. Elit duis tristique sollicitudin nibh sit amet commodo."
             </p>
             <p>
-                "Praesent tristique magna sit amet purus gravida. Accumsan lacus vel facilisis volutpat. Viverra mauris in aliquam sem. Varius quam quisque id diam vel quam. Elit eget gravida cum sociis natoque penatibus. Imperdiet nulla malesuada pellentesque elit. Lectus arcu bibendum at varius vel. Dictumst quisque sagittis purus sit amet. Tortor consequat id porta nibh venenatis cras. Netus et malesuada fames ac."
+                "Nulla porttitor massa id neque aliquam vestibulum morbi. Facilisi nullam vehicula ipsum a arcu cursus vitae congue. Nam libero justo laoreet sit amet cursus sit amet dictum. Tristique magna sit amet purus gravida quis. Velit euismod in pellentesque massa placerat. In ante metus dictum at tempor commodo. Libero nunc consequat interdum varius sit amet mattis. Egestas sed sed risus pretium quam vulputate dignissim. Diam phasellus vestibulum lorem sed risus. Cursus sit amet dictum sit amet justo donec enim."
             </p>
             <p>
-                "Lectus magna fringilla urna porttitor rhoncus dolor purus non. Mattis nunc sed blandit libero volutpat sed. Eget est lorem ipsum dolor sit amet consectetur. Volutpat est velit egestas dui id ornare arcu odio ut. Proin sed libero enim sed faucibus turpis in eu. Etiam sit amet nisl purus in mollis. Risus commodo viverra maecenas accumsan. Tellus in hac habitasse platea dictumst vestibulum rhoncus est. Sed faucibus turpis in eu mi bibendum neque egestas. Risus ultricies tristique nulla aliquet enim. Maecenas sed enim ut sem viverra aliquet eget sit. Gravida in fermentum et sollicitudin ac orci. Elit at imperdiet dui accumsan sit amet. Ut venenatis tellus in metus."
+                "
+                Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Nullam ac tortor vitae purus"
             </p>
-        </section>
-        <section class="products">
-            <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="image of one large white ceramic bowl and two smaller gray ceramic bowls in front of it">
-            <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="image of dark red long-necked ceramic vase">
+        </div>
+        <div class="products">
+            <h1>OUR PRODUCTS</h1>
+            <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white ceramic bowl and two smaller gray ceramic bowls in front of it">
+            <h2>MUNDO BOWLS     $48.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
+            <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="dark red long-necked ceramic vase">
+            <h2>NATUREZA VASE       $37.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="image of two white bowls, one sitting sideways inside of the other">
+            <h2>FEIRA BOWLS     $29.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="image of two dark grey unglazed cylindrical pots with two lids">
+            <h2>NATUREZA POTS       $59.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="image of white teardrop shaped vase with a eucalyptus branch in it">
+            <h2>PEDRA VASE      $31.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="image of two light gray glazed cylindrical pots with two lids">
+            <h2>VIAJA POTS      $57.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="image of three white deep ceramic plates stacked on top of one another with one more in front of the stack">
+            <h2>SERVIÇO PLATES      $35.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="image of dark blue long-necked ceramice vase">
+            <h2>CAMPEÃO vase        $37.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
             <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="image of two stacks of white ceramic bowls, one stack of three, one stack of two">
-            <h4>OUR PRODUCTS</h4>
-        </section>
-        <section class="contact"></section>
+            <h2>TROCA BOWLS         $25.00</h2>
+            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+            <button>ADD TO CART</button>
+        </div>
+        <div class="contact">
+            <h1>CONTACT US</h1>
+            <form>
+                <label for="email">EMAIL</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">MESSAGE</label>
+                <textarea ID="message" name="message" rows="5" cols="15" required></textarea>
+
+                <button>SUBMIT</button>
+            </form>
+        </div>
     </main>
     <footer>
-        <h4>CARA CARA</h4>
         <img src="./assets/icons8-youtube-96.png" alt="image of youtube icon">
         <img src="./assets/icons8-facebook-96 (1).png" alt="image of facebook icon">
+        <p>CARA</p>>
         <img src="./assets/icons8-pottery-96 (1).png" alt="image of an outline of a vase">
+        <p>CARA</p>>
         <img src="./assets/icons8-twitter-96.png" alt="image of twitter icon">
         <img src="./assets/icons8-instagram-96.png" alt="image of instagram icon">
     </footer>
