testing a bunch of things because I don't understand what to do

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
     <main>
         
-        <div>
-            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="image of hands working on a pottery piece">
+        <div class="home">
+            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="hands working on a pottery piece">
             <p>CERAMICS CRAFTED BY HAND...</p> 
             <p>...FROM THE GROUND UP</p>
         </div>
@@ -52,31 +52,31 @@
             <h2>NATUREZA VASE       $37.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="image of two white bowls, one sitting sideways inside of the other">
+            <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="two white bowls, one sitting sideways inside of the other">
             <h2>FEIRA BOWLS     $29.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="image of two dark grey unglazed cylindrical pots with two lids">
+            <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="two dark grey unglazed cylindrical pots with two lids">
             <h2>NATUREZA POTS       $59.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="image of white teardrop shaped vase with a eucalyptus branch in it">
+            <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="white teardrop shaped vase with a eucalyptus branch in it">
             <h2>PEDRA VASE      $31.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="image of two light gray glazed cylindrical pots with two lids">
+            <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="two light gray glazed cylindrical pots with two lids">
             <h2>VIAJA POTS      $57.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="image of three white deep ceramic plates stacked on top of one another with one more in front of the stack">
+            <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="three white deep ceramic plates stacked on top of one another with one more in front of the stack">
             <h2>SERVIÇO PLATES      $35.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="image of dark blue long-necked ceramice vase">
+            <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="dark blue long-necked ceramice vase">
             <h2>CAMPEÃO vase        $37.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="image of two stacks of white ceramic bowls, one stack of three, one stack of two">
+            <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="two stacks of white ceramic bowls, one stack of three, one stack of two">
             <h2>TROCA BOWLS         $25.00</h2>
             <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
             <button>ADD TO CART</button>
@@ -95,13 +95,13 @@
         </div>
     </main>
     <footer>
-        <img src="./assets/icons8-youtube-96.png" alt="image of youtube icon">
-        <img src="./assets/icons8-facebook-96 (1).png" alt="image of facebook icon">
+        <img src="./assets/icons8-youtube-96.png" alt="youtube icon">
+        <img src="./assets/icons8-facebook-96 (1).png" alt="facebook icon">
         <p>CARA</p>>
-        <img src="./assets/icons8-pottery-96 (1).png" alt="image of an outline of a vase">
+        <img src="./assets/icons8-pottery-96 (1).png" alt="outline of a vase">
         <p>CARA</p>>
-        <img src="./assets/icons8-twitter-96.png" alt="image of twitter icon">
-        <img src="./assets/icons8-instagram-96.png" alt="image of instagram icon">
+        <img src="./assets/icons8-twitter-96.png" alt="twitter icon">
+        <img src="./assets/icons8-instagram-96.png" alt="instagram icon">
     </footer>
 </body>
 </html>
