slowly figuring this out

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <header>
         <nav>
-            <a href>CARA CARA</a>
-            <img src="./assets/icons8-pottery-96.png" alt="outline of a vase">
+            <a href>CARA</a>
+            <img src="./assets/icons8-pottery-96.png" alt="outline of a vase" width="20" height="30">
+            <a href>CARA</a>
             <ul> 
                 <li>ABOUT</li>
                 <li>PRODUCTS</li>
@@ -22,9 +23,9 @@
     <main>
         
         <div class="home">
-            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="hands working on a pottery piece">
-            <p>CERAMICS CRAFTED BY HAND...</p> 
-            <p>...FROM THE GROUND UP</p>
+            <img src="./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="two hands working clay into a pottery piece" width="1000" height="300">
+            <h1>CERAMICS CRAFTED BY HAND...</h1> 
+            <h2>...FROM THE GROUND UP</h2>
         </div>
 
         <div class="about">
@@ -44,43 +45,82 @@
         </div>
         <div class="products">
             <h1>OUR PRODUCTS</h1>
-            <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white ceramic bowl and two smaller gray ceramic bowls in front of it">
-            <h2>MUNDO BOWLS     $48.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="dark red long-necked ceramic vase">
-            <h2>NATUREZA VASE       $37.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="two white bowls, one sitting sideways inside of the other">
-            <h2>FEIRA BOWLS     $29.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="two dark grey unglazed cylindrical pots with two lids">
-            <h2>NATUREZA POTS       $59.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="white teardrop shaped vase with a eucalyptus branch in it">
-            <h2>PEDRA VASE      $31.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="two light gray glazed cylindrical pots with two lids">
-            <h2>VIAJA POTS      $57.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="three white deep ceramic plates stacked on top of one another with one more in front of the stack">
-            <h2>SERVIÇO PLATES      $35.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="dark blue long-necked ceramice vase">
-            <h2>CAMPEÃO vase        $37.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
-            <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="two stacks of white ceramic bowls, one stack of three, one stack of two">
-            <h2>TROCA BOWLS         $25.00</h2>
-            <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
-            <button>ADD TO CART</button>
+
+            <div class="gallery">
+                <a target="_blank" href="tom-crew-7HuTGlUfQSo-unsplash.jpg">
+                    <img src="./assets/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="one large white ceramic bowl and two smaller gray ceramic bowls in front of it" width="400" height="400">
+                </a>
+                <div class="desc">MUNDO BOWLS     $48.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            
+            <div class="gallery">
+                <a target="_blank" href="oriento-maVIpNNtmlQ-unsplash.jpg">
+                    <img src="./assets/oriento-maVIpNNtmlQ-unsplash.jpg" alt="dark red long-necked ceramic vase" width="400" height="400">
+                </a>
+                <div class="desc">NATUREZA VASE       $37.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="tom-crew-bgIO-u4GEfI-unsplash.jpg">
+                    <img src="./assets/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="two white bowls, one sitting sideways inside of the other" width="400" height="400">
+                </a>
+                <div class="desc">FEIRA BOWLS     $29.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="tom-crew-3uwu5K0RtaE-unsplash.jpg">
+                    <img src="./assets/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="two dark grey unglazed cylindrical pots with two lids" width="400" height="400">
+                </a>
+                <div class="desc">NATUREZA POTS       $59.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="linh-le-a0rE64YJDA4-unsplash.jpg">
+                    <img src="./assets/linh-le-a0rE64YJDA4-unsplash.jpg" alt="white teardrop shaped vase with a eucalyptus branch in it" width="400" height="400">
+                </a>
+                <div class="desc">PEDRA VASE      $31.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="tom-crew-oiZAQvxTcYQ-unsplash.jpg">
+                    <img src="./assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="two light gray glazed cylindrical pots with two lids" width="400" height="400">
+                </a>
+                <div class="desc">VIAJA POTS      $57.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="tom-crew-YA2E3d7a9Wo-unsplash.jpg">
+                    <img src="./assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="three white deep ceramic plates stacked on top of one another with one more in front of the stack" width="400" height="400">
+                </a>
+                <div class="desc">SERVIÇO PLATES      $35.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="oriento-l0ah3UBLppo-unsplash.jpg">
+                    <img src="./assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="dark blue long-necked ceramice vase" width="400" height="400">
+                </a>
+                <div class="desc">CAMPEÃO vase        $37.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="tom-crew-SITGdvztUdg-unsplash.jpg">
+                    <img src="./assets/tom-crew-SITGdvztUdg-unsplash.jpg" alt="two stacks of white ceramic bowls, one stack of three, one stack of two" width="400" height="400">
+                </a>
+                <div class="desc">TROCA BOWLS         $25.00</div>
+                <p>Tincidunt praesent semper feugiat nibh sed. Vulputate mi sit amet mauris commodo quis imperdiet massa. Amet tellus cras adipiscing enim eu turpis egestas pretium aenean</p>
+                <button>ADD TO CART</button>
+            </div>
         </div>
+
         <div class="contact">
             <h1>CONTACT US</h1>
             <form>
